# backend/src/main/java/ru/laughder/dto/LoginRequest.java
@@ -1,0 +1,3 @@
+package ru.laughder.dto;
+
+public record LoginRequest(String login, String password) {}
